--- a/estateManager/src/main/resources/static/manager/table.html
+++ b/estateManager/src/main/resources/static/manager/table.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>React Tutorial</title>
+<title>RealEstate Manager</title>
 
 
 <script
@@ -29,6 +29,8 @@
 </head>
 <body>
 	<div id="content"></div>
+	<div id="modal"></div>
+	
 	<script src="/app/app.js"></script>
 </body>
 </html>
